--- a/admin.html
+++ b/admin.html
@@ -12,7 +12,7 @@
     <div class="w3-sidebar w3-card" style="width:12%">
     <h3 class="w3-bar-item">Menu</h3>
     <a href="admin.php" class="w3-bar-item w3-button">Nuevo Usuario</a>
-    <a href="obtener.php" class="w3-bar-item w3-button">Listar Usuarios</a>
+    <a href="obtenerusuarios.php" class="w3-bar-item w3-button">Listar Usuarios</a>
     <br>
     <a href="admin.html.php" class="w3-bar-item w3-button">Volver</a>
     <br>
